--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "joi": "^17.13.3"
+    "firebase-admin": "^13.4.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2"
   }
 }
