--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=8080
-MODO_PERSISTENCIA = MEM
+MODO_PERSISTENCIA =MONGODB
 
 FRONTEND_URL=http://localhost:8081
 CORS_LOCALHOST=http://localhost:8081
