--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #FIREBASE
 gameshareapp-d2395-firebase-adminsdk-fbsvc-0e421fb2b2.json
-
+#MONGODB ,BASE LOCAL
+MongoDb/
 # Dependencies
 node_modules/
 npm-debug.log*
