--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ CORS_LOCALHOST=http://localhost:8081
 CORS_ANDROID_EMULATOR=http://10.0.2.2:8081
 CORS_EXPO_APP=exp://192.168.1.0:8081
 FRONTEND_URL=http://localhost:3000
+
+MAIL_USER=gameshareapp2@gmail.com
+MAIL_PASS=gameshare123
