--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ CORS_EXPO_APP=exp://192.168.1.0:8081
 FRONTEND_URL=http://localhost:3000
 
 MAIL_USER=gameshareapp2@gmail.com
-MAIL_PASS=gameshare123
+MAIL_PASS=yfgl gkdg jvps pnml
